[gd_scene load_steps=7 format=3 uid="uid://beiqu6x6hdyll"]

[ext_resource type="Script" path="res://Scripts/Screens/results.gd" id="1_652e3"]
[ext_resource type="FontFile" uid="uid://dk6ts2l4bajko" path="res://Assets/Fonts/TERMINAT.TTF" id="2_3ygvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dywdh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l665r"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nln3k"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkl38"]
bg_color = Color(0.0274754, 0, 1, 1)

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_652e3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dywdh")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.0
offset_top = -226.0
offset_right = 478.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 121
text = "RESULTS"

[node name="RESULTS" type="Node" parent="."]

[node name="Score" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -98.0
offset_right = 753.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 38
text = "SCORE:"

[node name="ScoreDP" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -98.0
offset_right = 1007.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 38
text = "00000"

[node name="EnemiesDown" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -459.0
offset_top = -53.0
offset_right = 497.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 38
text = "ENEMIES DOWN:"

[node name="EnemiesDownDP" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -53.0
offset_right = 1007.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 38
text = "00000"

[node name="Time" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -11.0
offset_right = 830.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 38
text = "TIME:"

[node name="TimeDP" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -11.0
offset_right = 1007.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 38
text = "00000"

[node name="Rank" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = 44.0
offset_right = 721.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 56
text = "RANK:"

[node name="RankDP" type="Label" parent="RESULTS"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = 44.0
offset_right = 1010.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 56
text = "A"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = 118.0
offset_right = 319.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RestartLevelButton" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 51
theme_override_styles/hover = SubResource("StyleBoxFlat_l665r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nln3k")
theme_override_styles/normal = SubResource("StyleBoxFlat_xkl38")
text = " PLAY "

[node name="RestartGameButton" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 51
theme_override_styles/hover = SubResource("StyleBoxFlat_l665r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nln3k")
theme_override_styles/normal = SubResource("StyleBoxFlat_xkl38")
text = " OPTIONS "

[node name="MenuButton" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("2_3ygvm")
theme_override_font_sizes/font_size = 51
theme_override_styles/hover = SubResource("StyleBoxFlat_l665r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nln3k")
theme_override_styles/normal = SubResource("StyleBoxFlat_xkl38")
text = " HOW TO PLAY "

[connection signal="pressed" from="BoxContainer/VBoxContainer/RestartLevelButton" to="." method="_on_restart_level_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
